# WMTP

./: Cargo.toml
certs/: cert.pem  key.pem
client/: app.html  index.html
client/css/: style.css
client/js/: protocol.js  transport.js  ui.js
docs/: PROTOCOL.md
scripts/: deploy.sh  renew-cert.sh  setup-server.sh
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  session.rs  token.rs
