[package]
name = "wmtp-server"
version = "0.1.0"
edition = "2021"
authors = ["WMTP Team <guessmesir.007@gmail.com>"]
description = "WMTP - WebTransport Mail Transfer Protocol Server"
license = "MIT"
# repository = "https://github.com/yourusername/wmtp"

[dependencies]
# WebTransport / QUIC
wtransport = "0.1"

# Async Runtime
tokio = { version = "1.34", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Time
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "wmtp-server"
path = "src/main.rs"
